enhance dan penambahan featur
